[tool.poetry]
name = "filament"
version = "0.1.0"
description = ""
authors = ["Job Feldbrugge <14946916+jfeldbrugge@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
h5py = "^3.10.0"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
numba = "^0.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
